--- a/web/src/templates/home.html
+++ b/web/src/templates/home.html
@@ -9,7 +9,7 @@
     <!-- Page Info -->
     
 
-    <link rel="stylesheet" type="text/css" href="css/agile.css">
+    <link rel="stylesheet" href="public/css/agile.css">
   </head>
 
   <body>
