--- a/web/src/templates/home.html
+++ b/web/src/templates/home.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-   
+  <<head>
+      
+      <meta charset="utf-8">
+          <link rel="stylesheet" href="css/agile.css" />
+      <!-- Setting the webpage's headline -->
+      <h1>    Welcome to the Snail Scale website </h1>
 
-    <!-- Page Info -->
-    
-
-    <link rel="stylesheet" href="public/css/agile.css">
-  </head>
+    </head>
 
   <body>
 
