--- a/web/src/templates/home.html
+++ b/web/src/templates/home.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 
-  <<head>
+  <head>
       
       <meta charset="utf-8">
-          <link rel="stylesheet" href="css/agile.css" />
+          <link rel="stylesheet" type="text/css" href="css/agile.css" />
       <!-- Setting the webpage's headline -->
       <h1>    Welcome to the Snail Scale website </h1>
 
