--- a/web/src/templates/home.html
+++ b/web/src/templates/home.html
@@ -4,9 +4,10 @@
   <head>
       
       <meta charset="utf-8">
-          <link rel="stylesheet" type="text/css" href="css/agile.css" />
+          
       <!-- Setting the webpage's headline -->
-      <h1>    Welcome to the Snail Scale website </h1>
+         <title>Welcome to the Snail Scale website</title>
+         <link rel="stylesheet" type="text/css" href="css/agile.css" />
 
     </head>
 
