--- a/web/src/templates/home.html
+++ b/web/src/templates/home.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8">
           
       <!-- Setting the webpage's headline -->
-         <title>Welcome to the Snail Scale website</title>
+         <h1>Welcome to the Snail Scale website</h1s>
          <link rel="stylesheet" type="text/css" href="css/agile.css" />
 
     </head>
