--- a/web/src/public/css/agile.css
+++ b/web/src/public/css/agile.css
@@ -4,10 +4,10 @@ body{
     
 }
 h1{
-  
+  padding: 1.6rem;
   font-family: Arial;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 40px;
   color: white;
   text-align: center;
 }
