--- a/web/src/templates/home.html
+++ b/web/src/templates/home.html
@@ -38,6 +38,8 @@
           
           <p class="text"> What is the user supposed to do? </p>
               The user needs to simply put the food on the scale and the scale will take care of the rest.
+              <br>
+              <button type="button">Place an Order</button>
           
       </div>
       </div>
